# flappytiger

./: .gitignore  .gitmodules  CMakeLists.txt  README  README.md
resources/: flappytiger.desktop
resources/shaders/: 2d.vert  2d_colored.frag  2d_textured.frag  text.frag  text.vert
src/: FlappyTiger.cpp  FlappyTiger.h  main.cpp
src/game/: IngameScreen.cpp  IngameScreen.h  StartScreen.cpp  StartScreen.h
src/render/: FontRenderer.cpp  FontRenderer.h  stb_image.h
src/render/buffer/: Buffer.h  DynamicMesh.cpp  DynamicMesh.h  Point.h  StaticMesh.cpp  StaticMesh.h  Texture.cpp  Texture.h
src/render/shader/: Shader.cpp  Shader.h  Uniform.h
src/render/window/: InputsCallback.h  Screen.h  Window.cpp  Window.h
